# GCI-Data-Analisis

./: .gitignore  README.md  pyproject.toml
data/processed/: bd_diccionario_indices.csv  data_pivoted.csv  data_pivoted_2.csv  puntajes_paises_1.xlsx  puntajes_paises_2.xlsx
doc/tables/: indicadores_en_todo_el_periodo.xlsx  resumendata.xlsx
notebooks/: analisis_gci_py.qmd  analisis_gci_r.qmd  analisis_indices_wef.ipynb  bd_datos_indicesWEF.ipynb  creacion_dicc_indicadores.ipynb  tabla_banderas.html  tabla_paises.ipynb
reportes/figures/: HJbiplot_fig_org.json  mapa_competitividad.html  mapa_competitividad.json
reportes/tables/: indicadores_en_todo_el_periodo.xlsx  resumendata.xlsx
src/: analisis_statis.R  biplots_utils.py  data_transformation.py  extraction_index-v2.py  extraction_index.py  get_country_flag.py  setup_r.sh
src/pybiplots/: HJ_Biplot.py
website/: HJbiplot_fig_org.html  _quarto.yml  biplot.qmd  deploy.sh  eda.qmd  env.example  index.qmd  statis.qmd
