[project]
name = "analisis-gci-index"
version = "0.1.0"
description = "Análisis de índices de competitividad"
authors = [
    {name = "Ariel",email = "ariel.nunez.sa@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tabula-py (>=2.10.0,<3.0.0)",
    "jpype1 (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
